<resources>
    <string name="app_name">Lab1</string>
    <string name="choose_a_difficulty">Choose a difficulty</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="choose_a_type_of_task">Choose a type of task</string>
    <string name="theory">theory</string>
    <string name="practice">practice</string>
    <string name="click">Click</string>
    <string name="difficulty">Difficulty:</string>
    <string name="type">Type:</string>
    <string name="history">History</string>
    <string name="back">Back</string>
    <string name="clear_history">Clear history</string>
    <string name="show_tasks">Show tasks</string>
    <string-array name="tasks">
        <item>
Describe all present tenses using examples</item>
        <item>
Describe all past tenses using examples</item>
        <item>
Describe all future tenses using examples</item>
        <item>
Write a letter to your pen-friend describing your usual day at school, university or work</item>
        <item>
Write a formal essay about an interesting and well-known historical event</item>
        <item>
Write an opinion essay about new technologies and describe how will our world be look like in 20 years</item>
    </string-array>
</resources>
