<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_difficulty"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioDiff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15sp">

        <RadioButton
            android:id="@+id/easyB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:textSize="19sp">

        </RadioButton>

        <RadioButton
            android:id="@+id/mediumB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textSize="19sp">

        </RadioButton>

        <RadioButton
            android:id="@+id/hardB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:textSize="19sp">

        </RadioButton>
    </RadioGroup>

    <TextView
        android:id="@+id/txtType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_type_of_task"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15sp">

        <RadioButton
            android:id="@+id/theoryB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theory"
            android:textSize="19sp">

        </RadioButton>

        <RadioButton
            android:id="@+id/practiceB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/practice"
            android:textSize="19sp">

        </RadioButton>
    </RadioGroup>

    <Button
        android:id="@+id/resButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click"
        android:onClick="buttonClicked">

    </Button>

</LinearLayout>